fix: search result date contrast color

--- a/src/scss/partials/_result.scss
+++ b/src/scss/partials/_result.scss
@@ -32,3 +32,11 @@
 
   }
 }
+
+.a11y-contrast {
+  .result {
+    &_date {
+      color: rgba(get-contrast-color(dark), .6);
+    }
+  }
+}
